kubernetes/staging/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: speranskiy-backend-deployment-stg
  labels:
    app: speranskiy-backend-stg
spec:
  replicas: 3
  selector:
    matchLabels:
      app: speranskiy-backend-stg
  template:
    metadata:
      labels:
        app: speranskiy-backend-stg
    spec:
      containers:
        - name: speranskiy-backend-stg
          image: dockerhub.timeweb.cloud/yakwilik/speranskiy_backend
          ports:
            - containerPort: 7001
            - containerPort: 7002
