kubernetes/staging/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: speranskiy-backend-ingress-stg
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
    - host: stg.yurist-bot.com
      http:
        paths:
          - path: /api/
            pathType: Prefix
            backend:
              service:
                name: speranskiy-backend-service-stg
                port:
                  number: 7001
          - path: /
            pathType: Prefix
            backend:
              service:
                name: speranskiy-frontend-service-stg
                port:
                  number: 90
  tls:
    - hosts:
        - stg.yurist-bot.com
      secretName: yurist-bot-tls
